--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>users</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="users.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Users</h1>
